# WestermoConf

./: .gitignore  README.md  config.py  csv_lib.py  debug.py  logging_config.py  main.py  old_main.py  pyproject.toml  requirements.txt  running_config.cfg  setup_scrapli_structure.sh  startup_config.cfg  telnet2serlib.py  test.py  westermo_ser_lib.py
return_examples/: show_alarm.txt  show_ifaces.txt  show_port.txt  system-information.txt
scrapli_community/: __init__.py
scrapli_community/westermo/: __init__.py
scrapli_community/westermo/weos/: __init__.py  sync_driver.py
tests/: conftest.py  test_csv_lib.py  test_input_validation.py  test_westermo_lib.py
ttp_templates/: alarm_log.txt  ports.txt  show_frnt.txt  show_ifaces.txt  system-information.txt
westermo/weos/: __init__.py  async_driver.py  westermo_weos.py
